@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclUnixTime.c,v 1.18.2.17 2010/02/26 01:21:08 dgp Exp $
+ * RCS: @(#) $Id: tclUnixTime.c,v 1.18.2.18 2010/03/14 16:53:29 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -64,7 +64,7 @@ Tcl_ScaleTimeProc *tclScaleTimeProcPtr = NativeScaleTime;
 ClientData tclTimeClientData = NULL;
 
 /*
- *-----------------------------------------------------------------------------
+ *----------------------------------------------------------------------
  *
  * TclpGetSeconds --
  *
@@ -77,7 +77,7 @@ ClientData tclTimeClientData = NULL;
  * Side effects:
  *	None.
  *
- *-----------------------------------------------------------------------------
+ *----------------------------------------------------------------------
  */
 
 unsigned long
@@ -87,7 +87,7 @@ TclpGetSeconds(void)
 }
 
 /*
- *-----------------------------------------------------------------------------
+ *----------------------------------------------------------------------
  *
  * TclpGetClicks --
  *
@@ -102,7 +102,7 @@ TclpGetSeconds(void)
  * Side effects:
  *	None.
  *
- *-----------------------------------------------------------------------------
+ *----------------------------------------------------------------------
  */
 
 unsigned long
@@ -136,7 +136,7 @@ TclpGetClicks(void)
 #ifdef TCL_WIDE_CLICKS
 
 /*
- *-----------------------------------------------------------------------------
+ *----------------------------------------------------------------------
  *
  * TclpGetWideClicks --
  *
@@ -151,7 +151,7 @@ TclpGetClicks(void)
  * Side effects:
  *	None.
  *
- *-----------------------------------------------------------------------------
+ *----------------------------------------------------------------------
  */
 
 Tcl_WideInt
@@ -176,7 +176,7 @@ TclpGetWideClicks(void)
 }
 
 /*
- *-----------------------------------------------------------------------------
+ *----------------------------------------------------------------------
  *
  * TclpWideClicksToNanoseconds --
  *
@@ -189,7 +189,7 @@ TclpGetWideClicks(void)
  * Side effects:
  *	None.
  *
- *-----------------------------------------------------------------------------
+ *----------------------------------------------------------------------
  */
 
 double
@@ -424,14 +424,14 @@ TclpGmtime(
     ThreadSpecificData *tsdPtr = TCL_TSD_INIT(&tmKey);
 
 #ifdef HAVE_GMTIME_R
-    gmtime_r(timePtr, &(tsdPtr->gmtime_buf));
+    gmtime_r(timePtr, &tsdPtr->gmtime_buf);
 #else
     Tcl_MutexLock(&tmMutex);
-    memcpy(&(tsdPtr->gmtime_buf), gmtime(timePtr), sizeof(struct tm));
+    memcpy(&tsdPtr->gmtime_buf, gmtime(timePtr), sizeof(struct tm));
     Tcl_MutexUnlock(&tmMutex);
 #endif
 
-    return &(tsdPtr->gmtime_buf);
+    return &tsdPtr->gmtime_buf;
 }
 
 /*
@@ -475,14 +475,14 @@ TclpLocaltime(
 
     SetTZIfNecessary();
 #ifdef HAVE_LOCALTIME_R
-    localtime_r(timePtr, &(tsdPtr->localtime_buf));
+    localtime_r(timePtr, &tsdPtr->localtime_buf);
 #else
     Tcl_MutexLock(&tmMutex);
-    memcpy(&(tsdPtr->localtime_buf), localtime(timePtr), sizeof(struct tm));
+    memcpy(&tsdPtr->localtime_buf, localtime(timePtr), sizeof(struct tm));
     Tcl_MutexUnlock(&tmMutex);
 #endif
 
-    return &(tsdPtr->localtime_buf);
+    return &tsdPtr->localtime_buf;
 }
 /*
  * Forwarder for obsolete item in Stubs
